--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,24 @@
   --color-gb-gray: #928374;
   --color-gb-gray-bg: #ddd5ca;
 }
+
+@utility nb-card {
+  border: 2px solid var(--color-gb-fg0);
+  box-shadow: 4px 4px 0px var(--color-gb-fg0);
+}
+@utility nb-card-sm {
+  border: 2px solid var(--color-gb-fg0);
+  box-shadow: 2px 2px 0px var(--color-gb-fg0);
+}
+@utility nb-btn {
+  border: 2px solid var(--color-gb-fg0);
+  box-shadow: 3px 3px 0px var(--color-gb-fg0);
+  transition: all 0.1s ease;
+}
+@utility nb-btn-press {
+  translate: 3px 3px;
+  box-shadow: 0px 0px 0px var(--color-gb-fg0);
+}
+@utility nb-input {
+  border: 2px solid var(--color-gb-fg0);
+}
